--- a/main.html
+++ b/main.html
@@ -3,12 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
 <img src="/static/logo.png" alt="logo"/> <hr>
 {{messages}}
 <hr>
-<form action="/" method="post" enctype="application/x-www-form-urlencoded">
+<form action="/" class ="input-area" method="post" enctype="application/x-www-form-urlencoded">
     <input type="text" name="name" style="width: 100%" placeholder="Name" /> <br>
     <textarea name="message" rows="10" style="width: 100%" placeholder="Message"></textarea> <br>
     <input type="submit"/>
