improved page style

--- a/main.html
+++ b/main.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
-<img src="/static/logo.png" alt="logo"/> <hr>
+<img src="/static/logo.png" class="logo-image" alt="logo"/> <hr>
 {{messages}}
 <hr>
 <form action="/" class ="input-area" method="post" enctype="application/x-www-form-urlencoded">
     <input type="text" name="name" style="width: 100%" placeholder="Name" /> <br>
-    <textarea name="message" rows="10" style="width: 100%" placeholder="Message"></textarea> <br>
+    <textarea name="message" rows="5" style="width: 100%" placeholder="Message"></textarea> <br>
     <input type="submit"/>
 </form>
 </body>
