--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
     <input type="text" name="name" style="width: 100%" placeholder="Name" /> <br>
     <textarea name="message" rows="5" style="width: 100%" placeholder="Message"></textarea> <br>
     <input type="submit"/>
+    <input type="file" name="file"/> <br>
 </form>
 </body>
 </html>
