--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <img src="/static/logo.png" class="logo-image" alt="logo"/> <hr>
 {{messages}}
 <hr>
-<form action="/" class ="input-area" method="post" enctype="application/x-www-form-urlencoded">
+<form action="/" class ="input-area" method="post" enctype="multipart/form-data">
     <input type="text" name="name" style="width: 100%" placeholder="Name" /> <br>
     <textarea name="message" rows="5" style="width: 100%" placeholder="Message"></textarea> <br>
     <input type="submit"/>
