--- a/main.html
+++ b/main.html
@@ -13,5 +13,11 @@
     <textarea name="message" rows="10" style="width: 100%" placeholder="Message"></textarea> <br>
     <input type="submit"/>
 </form>
+<br>
+<br>
+<form action="/upload/" method="post" enctype="multipart/form-data">
+	<input name="upload" id="upload_file" type="file"/>
+	<input type="submit" />
+</form>
 </body>
 </html>
