--- a/main.html
+++ b/main.html
@@ -5,12 +5,13 @@
     <title></title>
 </head>
 <body>
-<img src="/static/logo.png" alt="logo"/> <hr>
+<img src="/static/subdir/logo.png" alt="logo"/> <hr>
 {{messages}}
 <hr>
-<form action="/" method="post" enctype="application/x-www-form-urlencoded">
+<form action="/" method="post" enctype="multipart/form-data">
     <input type="text" name="name" style="width: 100%" placeholder="Name" /> <br>
     <textarea name="message" rows="10" style="width: 100%" placeholder="Message"></textarea> <br>
+    <input type="file" name="file"/> <br>
     <input type="submit"/>
 </form>
 </body>
