--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <img src="/static/logo.png" alt="logo"/> <hr>
+<img src="/static/BMW_logo.png" alt="logo"/> <hr>
+<img src="/static/Audi.jpg" alt="audi"/> <hr>
 {{messages}}
 <hr>
 <form action="/" method="post" enctype="application/x-www-form-urlencoded">
